scripts/ostool-patched/tests/ui/fail_runner_path_field.rs
use ostool::build::CargoQemuRunnerArgs;

fn main() {
    let _ = CargoQemuRunnerArgs {
        qemu_config: None,
        debug: false,
        dtb_dump: false,
        show_output: true,
    };
}
